--- a/index.html
+++ b/index.html
@@ -66,7 +66,71 @@
     </div>
   </section>
   
+  <section class="feature ">
 
+    <div class="feature__content container container--pall">
+
+      <div class="feature__intro">
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial hub. Control 
+          your finances like never before.
+        </p>
+      </div>
+  
+      <!-- 1 -->
+      <div class="feature__grid">
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-online.svg" alt="Online Banking"></div>
+          <div class="feature__title">
+            Online Banking
+          </div>
+          <div class="feature__description">
+            Our modern web and mobile applications allow you to keep track of your finances 
+            wherever you are in the world.
+          </div>
+        </div>
+  
+        <!-- 2 -->
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-budgeting.svg" alt="Simple Budgeting"></div>
+          <div class="feature__title">
+            Simple Budgeting
+          </div>
+          <div class="feature__description">
+            See exactly where your money goes each month. Receive notifications when you’re 
+            close to hitting your limits.
+          </div>
+        </div>
+  
+        <!-- 3 -->
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-onboarding.svg" alt="Fast Onboarding"></div>
+          <div class="feature__title">
+            Fast Onboarding
+          </div>
+          <div class="feature__description">
+            We don’t do branches. Open your account in minutes online and start taking control 
+            of your finances right away.
+          </div>
+        </div>
+  
+        <!-- 4 -->
+        <div class="feature__item">
+          <div class="feature__icon"><img src="/images/icon-api.svg" alt="Open API"></div>
+          <div class="feature__title">
+            Open API
+          </div>
+          <div class="feature__description">
+            Manage your savings, investments, pension, and much more from one account. Tracking 
+            your money has never been easier.
+          </div>
+        </div>
+      </div>
+      
+    </div>
+
+  </section>
 
 
 
@@ -75,29 +139,6 @@
 
 
   <!--
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
   Latest Articles
 
   By Claire Robinson
